# pfin

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  h --force-with-lease origin main  how --name-only HEAD  mypy.ini  pyproject.toml  review.md  ruff.toml  setup.cfg  tatus --porcelain
.cursor/rules/: bootstrap-best-practices.mdc  fastapi-best-practices.mdc  jinja-best-practices.mdc  sortablejs-best-practices.mdc  sqlmodel-best-practices.mdc  testing-best-practices.mdc  weasyprint-best-practices.mdc
.github/workflows/: ci.yml
app/: .__init__.py.swp  config.py  db.py  main.py  models.py  schemas.py
coach_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
proj_mgmt/: prompt_plan.md  spec.md  todo.md
routers/: __init__.py  lineups.py  players.py  teams.py
services/: __init__.py  backup_service.py  csv_service.py  lineup_service.py  pdf_service.py
static/css/: style.css
static/js/: app.js  lineup.js
templates/: base.html  dashboard.html  lineup_builder.html  pdf_lineup.html  player_form.html  roster_list.html
tests/integration/: test_health.py  test_teams.py
utils/: __init__.py  errors.py  validators.py
